--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Create a schema from a openapi param",
   "main": "index.js",
   "scripts": {
-    "test": "tape test/*.js"
+    "test": "standard && tape test/*.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/orangewise/openapi-utils-param-to-schema#readme",
   "devDependencies": {
+    "standard": "^8.6.0",
     "tape": "^4.6.2",
     "z-schema": "^3.18.0"
   }
